2009-07-27  vadim  <vadim@vk.crocodile.org>

	* Cluster.cpp (Cluster::getMembersList): cluster group members can
	be references to interfaces and subinterfaces; this change adds
	support for subinterfaces.

2009-07-26  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::processFailoverGroup): While
	adding a copy of cluster interface to the firewall, make sure it
	has new unique ID instead of a copy of the ID of the cluster's
	interface object. If the ID is the same,
	RuleElementItf::validateChild() finds clusters' interface which is
	not a child of the firewall object and therefore is rejected.

2009-07-25  vadim  <vadim@vk.crocodile.org>

	* Compiler.h (fwcompiler): Deprecated object caching in compiler,
	fixes #228

	* Cluster.cpp (Cluster::getMembersList): need to scan not only
	StateSyncClusterGroup child objects but also all
	FailoverClusterGroup objects in order to find all member
	firewalls. The program used to look only at StateSyncClusterGroup
	objects, which meant it did not recognize any members if state
	sync group was empty. This fixes issue #4 in the bug #2826765:
	"problems and suggestions for 3.1.0-b1187".

2009-07-24  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getBranch): fixed problem #4 "GUI crash
	when setting action to be a chain." reported in the bug #2826765:
	"problems and suggestions for 3.1.0-b1187". The GUI crashed when
	policy rule in the cluster policy was set to action "Chain".

2009-07-17  vadim  <vadim@vk.crocodile.org>

	* Resources.cpp (Resources::getResourceStrList): This function
	provides a way to create lists of parameters in resource files.

	* fwbuilder.dtd.in (Library): fixed bug #2823424: "Deleting
	UserService object breaks data file format". When user deleted
	UserService object, it was moved to the "Deleted Objects" library
	which broke XML file because DTD did not allow UserService element
	as a child of Library

2009-07-16  vadim  <vadim@vk.crocodile.org>
