@@ -1,3 +1,11 @@
+2009-07-28  vadim  <vadim@vk.crocodile.org>
+
+	* Compiler_cluster.cpp (Compiler::populateClusterElements): while
+	scanning interfaces-members of a failover group, use only those
+	that are children of the firewall that we are compiling. fixes
+	#242 "fwb_ipt generates duplicate automatic rules for heartbeat
+	and other protocols"
+
 2009-07-27  vadim  <vadim@vk.crocodile.org>
 
 	* Cluster.cpp (Cluster::getMembersList): cluster group members can
